# ml-and-backtester-app

./: .dockerignore  .gitignore  Dockerfile  MLproject  README.md  delete.py  list.py  list_s3.py  main.py  pyproject.toml  python_env.yaml  requirements.txt  run_backtest.py  worker.py
.github/workflows/: ci.yml  test.yml
config/: backtest_config.json  config_update_data.py  run_pipeline_config.json
scripts/: backtest_pipeline.py  s3_example.py  tmp.py  update_data.py  update_macro_data.py  update_mkt_data.py
scripts/data_retrieving/: index_retriever.py
src/ml_and_backtester_app/analytics/: analytics.py
src/ml_and_backtester_app/backtester/: data.py  portfolio.py  signal_utilities.py  strategies.py  utilities.py
src/ml_and_backtester_app/dashboard/: app.py  callbacks.py  layout.py  pipeline_runner.py  s3_loader.py
src/ml_and_backtester_app/data/: data_handler.py  data_manager.py
src/ml_and_backtester_app/dynamic_allocation/: dynamic_allocation.py
src/ml_and_backtester_app/fmp/: fmp.py
src/ml_and_backtester_app/machine_learning/: features_engineering.py  features_selection.py  models.py
src/ml_and_backtester_app/machine_learning/schemes/: base.py  expanding.py  rolling.py  static.py
src/ml_and_backtester_app/utils/: config.py  s3_utils.py  vizu.py
tests/: test_config.py  test_imports.py  test_main_smoke.py  test_mlflow.py
