[project]
name = "ml_and_backtester_app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.42.69",
    "dotenv>=0.9.9",
    "ib-async>=2.1.0",
    "ib-insync>=0.9.86",
    "matplotlib>=3.10.8",
    "pandas>=2.1,<2.2",
    "numpy>=1.26,<2.0",
    "pyarrow>=23.0.1",
    "wrds>=3.1.6",
    "sqlalchemy>=1.4,<2.0",
    "fastparquet>=2025.12.0",
    "python-dotenv>=1.0",
    "better-aws>=0.7.0",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "lightgbm>=4.6.0",
    "ruff>=0.15.6",
    "pylint>=4.0.5",
    "black>=26.3.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pylint.format]
max-line-length = 120